--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Header -->
     <header class="header">
         <!-- Logo -->
-        <a href="#" class="logo">Logo</a>
+        <a href="#" class="logo">Portfolio</a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
 
@@ -49,11 +49,11 @@
                 <a href="http://" target="_blank">
                     <i class='bx bxl-github'></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <a href="/Madhav_Resume.pdf" download class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
-            <img src="/me.jpg" alt="">
+            <img src="/my_img/front.png" alt="">
         </div>
     </section>
 
@@ -61,7 +61,7 @@
     <!-- About Section Design -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="/me.jpg" alt="">
+            <img src="/my_img/side-left.png" alt="">
         </div>
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
@@ -83,7 +83,7 @@
     </section>
 
     <!-- About More -->
-    <div class="about-more" id="about-more">
+    <section class="about-more" id="about-more">
 
         <h1 class="about-more-heading">Learn More About Me</h1>
 
@@ -92,7 +92,7 @@
 
             <!-- Left : Image -->
             <div class="about-more-img">
-                <img src="/me.jpg" alt="">
+                <img src="/my_img/front.png" alt="">
             </div>
 
             <!-- Right : Education Details -->
@@ -141,7 +141,7 @@
                 <h2 class="about-more-heading"><span>Personal Details</span></h2>
 
                 <div class="personal-details">
-                    <ul class="pd-list">
+                    <ul>
                         <li><strong>Name: </strong> <span>Madhav Paliwal</span></li>
                         <li><strong>DOB: </strong> <span>July, 02 2001</span></li>
                         <li><strong>Address: </strong> <span>Indore, Madhya Pradesh</span></li>
@@ -202,7 +202,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
 
     <!-- Services Section Design -->
@@ -242,8 +242,9 @@
         <h2 class="heading">Latest <span>Projects</span></h2>
 
         <div class="portfolio-container">
+            <!-- Library -->
             <div class="portfolio-box">
-                <img src="/portfolio (2).jpg" alt="">
+                <img src="/img/library.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Library Management</h4>
                     <p>The library management project is a web-based application
@@ -253,8 +254,9 @@
                         target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
+            <!-- Instagram -->
             <div class="portfolio-box">
-                <img src="/portfolio (2).jpg" alt="">
+                <img src="/img/instagram.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Instagram Clone</h4>
                     <p>Developed a full-stack Instagram clone using React, Java, Spring Boot, and MySQL technologies.
@@ -263,8 +265,9 @@
                         target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
+            <!-- Chat -->
             <div class="portfolio-box">
-                <img src="/portfolio (3).jpg" alt="">
+                <img src="/img/chat.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Chat Application</h4>
                     <p>
@@ -301,7 +304,7 @@
     </section>
 
 
-    <!-- Portfolio Section Design -->
+    <!-- Contact Section Design -->
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me!</span></h2>
 
