Updating Portfolio : Adding Projects

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Madhav Paliwal ! Portfolio</title>
     <link rel="stylesheet" href="/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/d9ee1fb5f9.js" crossorigin="anonymous"></script> -->
 </head>
 
 <body>
@@ -242,63 +244,98 @@
         <h2 class="heading">Latest <span>Projects</span></h2>
 
         <div class="portfolio-container">
-            <!-- Library -->
-            <div class="portfolio-box">
-                <img src="/img/library.png" alt="">
-                <div class="portfolio-layer">
-                    <h4>Library Management</h4>
-                    <p>The library management project is a web-based application
-                        that allows librarians to manage their library's inventory and
-                        lending activities. </p>
-                    <a href="https://docs.google.com/document/d/1YEn2JoCyh41UPKuOCeW7IslMd0CjVKK8RnOjVdUNcMg/edit"
-                        target="_blank"><i class='bx bx-link-external'></i></a>
+            <!-- <div>
+                <button onclick="scrollLeft()" class="icon"><i class="fa-solid fa-angle-left"></i></button>
+            </div> -->
+            <div class="cover">
+                <div class="scroll-images">
+                    <!-- Library -->
+                    <div class="portfolio-box">
+                        <img src="/img/library.png" alt="">
+                        <div class="portfolio-layer">
+                            <h4>Library Management</h4>
+                            <p>The library management project is a web-based application
+                                that allows librarians to manage their library's inventory and
+                                lending activities. </p>
+                            <a href="https://docs.google.com/document/d/1jqMZB5GNUKOz0WPVTvfDz-DLNa19RxQZO00Pd2ndvZQ/edit"
+                                target="_blank"><i class='bx bx-link-external'></i></a>
+                        </div>
+                    </div>
+                    <!-- Instagram -->
+                    <div class="portfolio-box">
+                        <img src="/img/instagram.jpg" alt="">
+                        <div class="portfolio-layer">
+                            <h4>Instagram Clone</h4>
+                            <p>Developed a full-stack Instagram clone using React, Java, Spring Boot, and MySQL
+                                technologies.
+                            </p>
+                            <a href="https://docs.google.com/document/d/1jqMZB5GNUKOz0WPVTvfDz-DLNa19RxQZO00Pd2ndvZQ/edit"
+                                target="_blank"><i class='bx bx-link-external'></i></a>
+                        </div>
+                    </div>
+                    <!-- Web Store Microservices API -->
+                    <div class="portfolio-box">
+                        <img src="/img/web-store.jpg" alt="">
+                        <div class="portfolio-layer">
+                            <h4>Web-Store Microservices</h4>
+                            <p>Welcome to our cutting-edge web store API powered by Spring Boot microservices.
+                                Seamlessly connect, manage, and enhance your online shopping experience with our robust
+                                and scalable technology.</p>
+                            <a href="https://docs.google.com/document/d/18zibL_e0eirTP0mNRa20IJ7MrIgZFIwOa1PbM527a-Q/edit"
+                                target="_blank"><i class='bx bx-link-external'></i></a>
+                        </div>
+                    </div>
+                    <!-- Chat Application -->
+                    <div class="portfolio-box">
+                        <img src="/img/chat.jpg" alt="">
+                        <div class="portfolio-layer">
+                            <h4>Chat Application</h4>
+                            <p>Introducing our Java-based chat application powered by JDBC, delivering seamless
+                                communication and real-time messaging for an enhanced user experience.</p>
+                            <a href="https://docs.google.com/document/d/18zibL_e0eirTP0mNRa20IJ7MrIgZFIwOa1PbM527a-Q/edit"
+                                target="_blank"><i class='bx bx-link-external'></i></a>
+                        </div>
+                    </div>
+                    <!-- TODO Application -->
+                    <div class="portfolio-box">
+                        <img src="/img/To-Do_App.png" alt="">
+                        <div class="portfolio-layer">
+                            <h4>TODO Application</h4>
+                            <p>Effortlessly organize tasks with our Spring MVC-powered ToDo app. Streamline your
+                                productivity, manage priorities, and stay on top of your goals effectively and
+                                efficiently.</p>
+                            <a href="https://docs.google.com/document/d/18zibL_e0eirTP0mNRa20IJ7MrIgZFIwOa1PbM527a-Q/edit"
+                                target="_blank"><i class='bx bx-link-external'></i></a>
+                        </div>
+                    </div>
+                    <!-- Product CRUD Application -->
+                    <div class="portfolio-box">
+                        <img src="/img/CRUD.jpeg" alt="">
+                        <div class="portfolio-layer">
+                            <h4>Product CRUD</h4>
+                            <p>Effortlessly manage products with our Spring MVC CRUD app. Streamline creation,
+                                retrieval, update, and deletion, ensuring a seamless and efficient product management
+                                process.</p>
+                            <a href="https://docs.google.com/document/d/18zibL_e0eirTP0mNRa20IJ7MrIgZFIwOa1PbM527a-Q/edit"
+                                target="_blank"><i class='bx bx-link-external'></i></a>
+                        </div>
+                    </div>
+                    <!-- Employee CRUD Application -->
+                    <div class="portfolio-box">
+                        <img src="/img/CRUD.jpeg" alt="">
+                        <div class="portfolio-layer">
+                            <h4>Employee CRUD</h4>
+                            <p>Elevate workforce management with our Spring MVC Employee CRUD app. Streamline
+                                operations, effortlessly manage employee data, and boost efficiency through intuitive
+                                user interactions.</p>
+                            <a href="https://docs.google.com/document/d/18zibL_e0eirTP0mNRa20IJ7MrIgZFIwOa1PbM527a-Q/edit"
+                                target="_blank"><i class='bx bx-link-external'></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <!-- Instagram -->
-            <div class="portfolio-box">
-                <img src="/img/instagram.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Instagram Clone</h4>
-                    <p>Developed a full-stack Instagram clone using React, Java, Spring Boot, and MySQL technologies.
-                    </p>
-                    <a href="https://docs.google.com/document/d/1jqMZB5GNUKOz0WPVTvfDz-DLNa19RxQZO00Pd2ndvZQ/edit"
-                        target="_blank"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <!-- Chat -->
-            <div class="portfolio-box">
-                <img src="/img/chat.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Chat Application</h4>
-                    <p>
-                        Introducing our Java-based chat application powered by JDBC, delivering seamless communication
-                        and real-time messaging for an enhanced user experience.</p>
-                    <a href=""><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <!-- <div class="portfolio-box">
-                <img src="/portfolio (2).jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Library Management</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae eveniet officiis dolorum.</p>
-                    <a href=""><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="/portfolio (2).jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Library Management</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae eveniet officiis dolorum.</p>
-                    <a href=""><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="/portfolio (3).jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Library Management</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae eveniet officiis dolorum.</p>
-                    <a href=""><i class='bx bx-link-external'></i></a>
-                </div>
+            <!-- <div>
+                <button onclick="scrollRight()" class="icon"><i class="fa-solid fa-angle-right"></i></button>
             </div> -->
         </div>
     </section>
@@ -341,6 +378,17 @@
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <!-- My Js -->
     <script src="/script.js"></script>
+    <script>
+        /** ============================ Scroll Icon ============================ */
+        function scrollLeft() {
+            var left = document.querySelector(".scroll-images");
+            left.scrollBy(450, 0)
+        }
+        function scrollRight() {
+            var right = document.querySelector(".scroll-images");
+            right.scrollBy(-450, 0)
+        }
+    </script>
 </body>
 
 </html>
