--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a href="http://" target="_blank">
                     <i class='bx bxl-github'></i></a>
             </div>
-            <a href="/Madhav_Resume.pdf" download class="btn">Download CV</a>
+            <a href="/Madhav_Paliwal_Resume.pdf" download class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
